# programmingFromTheGroundUp

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.in  Makefile  Makefile.in  README.md  SESSION_NOTES.md  configure.ac
Power5PGU/: AddressingModes-DW.xml  AddressingModes.xml  AdvancedBranchProcessing.xml  AssemblyIntro-DW.xml  AssemblyIntro.xml  Book.xml  BranchProcessor-DW.xml  BranchProcessor.xml  FunctionsAndBranching.xml  Makefile  PS3Introduction-DW.xml  PS3Introduction.xml  PowerPCABI-DW.xml  PowerPCABI.xml  SPUCLanguage-DW.xml  SPUCLanguage.xml  SPUIntroduction.xml  SPUMultibuffering.xml  SPUOptimization-DW.xml  SPUOptimization.xml  transform.pl
ProgrammersToolbox/: Continuations.xml  EvaluatingLanguages.xml  FunctionFactories.xml  FunctionalProgrammingIntro.xml  Introduction.xml  LazyProgramming.xml  LinkedLists.xml  MemoryManagement-DW.xml  MemoryManagement.xml  MetaProgramming-DW.xml  MetaProgramming.xml  MetaProgramming2.xml  MetaProgramming3.xml  PTB.xml  RecursionProgramProving-DW.xml  RecursionProgramProving.xml  SymbolicProgramming.xml  linkedlistexample.dia  sharedlistexamples.dia  transform.pl
ProgrammingGroundUp/: ASCIIAp.xml  CCh.xml  CTranslationAp.xml  CountingCh.xml  FDLAp.xml  FilesCh.xml  FirstProgsCh.xml  FunctionsCh.xml  GDBAp.xml  GUIAp.xml  Hello-World.c  Hello-World.py  HistoryAp.xml  InstructionsAp.xml  IntroductionCh.xml  LinkingCh.xml  Makefile  Makefile.sphinx  MemoryAdvCh.xml  MemoryCh.xml  MemoryIntCh.xml  OptimizationCh.xml  OtherLangCh.xml  ProgrammingGroundUp.xml  RecordsCh.xml  RobustCh.xml  SyscallAp.xml  WhereNextCh.xml  add-year-werror.s  add-year.s  alloc.s  bigendian.sxd  conversion-program.s  count-chars.s  endian.sxd  exit.s  factorial.s  gnome-example-c.c  gnome-example.py  helloworld-nolib.s  (+20 more)
StateManagementFlowControl/: IntroductionCh.xml  Makefile  MemoryManageCh.xml  StateFlow.xml  StateManageIntroCh.xml  ValuesCh.xml  alloc.s  common.s  (+5 more)
(+124 files in other folders)
